--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,11 @@
 <html>
 <body>
 <h2> welcome {{user}} </h2>
+<br>
+<ul>
+<li>{{list1[0]}}</li>
+<li>{{list1[1]}}</li>
+<li>{{list1[2]}}</li>
+</ul>
 </body>
 </html>
