--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-{% extends index.html %}
+{% extends "index.html" %}
 {% block footer %}
 
 <marquee><i>this page is just a test page.</i></marquee>
