--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,8 @@
 <body>
 <h2> welcome {{user}} </h2>
 <br>
-<ul>
-<li>{{list1[0]}}</li>
-<li>{{list1[1]}}</li>
-<li>{{list1[2]}}</li>
+{%block login%} {%endblock%}
 {%block footer%} {%endblock%}
-</ul>
+
 </body>
 </html>
