--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -3,6 +3,7 @@
 <h1><text color='blue'> Sign-In</h1>
 <br>
 <form action='' method='post'>
+{{form.hidden_tag()}}
 {{form.username.label}}   {{form.username}}
 <br><br><br>
 {{form.password.label}}   {{form.password}}
